[package]
name = "track"
version = "0.3.0"
authors = ["Matthias Metzger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
url = { version = "2.1.1", features = ["serde"] }
anyhow = "1.0.68"
cli-table = "0.4.7"
chrono = "0.4"
thiserror = "1.0.38"
dirs = "4.0.0"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
regex = "1.3.9"
clap = { version = "4.1.3", features = ["derive"] }
