[package]
name = "track"
version = "0.4.0"
authors = ["Matthias Metzger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
url = { version = "2.1.1", features = ["serde"] }
anyhow = "1.0"
cli-table = "0.4"
chrono = "0.4"
thiserror = "2.0"
dirs = "5.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
